--- a/argo-applications/values.yaml
+++ b/argo-applications/values.yaml
@@ -40,8 +40,5 @@ applications:
     path: argocd/console
     repoURL: https://github.com/openshift/openshift-gitops-examples.git
     targetRevision: HEAD
-    syncPolicy: |-
-      automated:
-        prune: true
-        selfHeal: true
+    syncPolicy: {}
 
